Testes de geracao de arquivo